--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
         <h6 class="text-uppercase mb-4 font-weight-bold">Fale Conosco</h6>
         <p>
-          <i class="fas fa-home mr-3"></i> Rodovia Amaral Peixoto, s/nº, Km 114, Lote 6, São Matheus, São Pedro da Aldeira, RJ</p>
+          <i class="fas fa-home mr-3"></i> Rodovia Amaral Peixoto, s/nº, Km 114, Lote 6, São Matheus, São Pedro da Aldeia, RJ</p>
         <p>
           <i class="fas fa-envelope mr-3"></i> comercial@concreja.com.br</p>
         <p>
