--- a/index.html
+++ b/index.html
@@ -174,10 +174,14 @@
 
       <!-- Grid column -->
       <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-        <h6 class="text-uppercase mb-4 font-weight-bold">Formas de Pagamento</h6>
+        <h6 class="text-uppercase mb-4 font-weight-bold">Horário de FUncionamento</h6>
         <p>
-          <a href="#!">Aceitamos todos os cartões de crédito e/ou débito. Não aceitamos cheques.</a>
+          <a href="#!">Seg a Sex das 09:00h às 18:00h</a>
         </p>
+        <p>
+          <a href="#!">Sábado das 09:00h às 13:00h</a>
+        </p>
+        
         
       </div>
 
