--- a/index.html
+++ b/index.html
@@ -277,4 +277,15 @@
   z-index:1000;" target="_blank">
   <i style="margin-top:16px" class="fa fa-whatsapp"></i>
   </a>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-152657781-1">
+  </script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-152657781-1');
+  </script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
 </html>
